--- a/web-frontend/components/Layout/Layout.css
+++ b/web-frontend/components/Layout/Layout.css
@@ -1,11 +1,13 @@
 .wrapper {
   position: absolute;
-  top: 0;
-  left: 0;
   display: flex;
-  height: 100%;
   padding: 20px;
-  max-width: 400px;
-  right: 0;
+  width: 600px;
+  height: 400px;
+  left: 50%;
+  top: 50%;
+  margin-left: -300px;
+  margin-top: -200px;
   box-sizing: border-box;
+  box-shadow: 0 3px 10px rgba(0,0,0, 0.2);
 }
